--- a/app/views/deliveries/_canceled_item.html.erb
+++ b/app/views/deliveries/_canceled_item.html.erb
@@ -21,7 +21,7 @@
   </div>
 
   <div class="order__center">
-    <div class="box box_bt" style="width: 557px">
+    <div class="box box_bt">
       <div class="box__inner">
 
         <div class="order__number">Order #973-1</div>
