--- a/app/views/deliveries/_line_item.html.erb
+++ b/app/views/deliveries/_line_item.html.erb
@@ -22,7 +22,7 @@
   </div>
 
   <div class="order__center">
-    <div class="box box_bt" style="width: 557px">
+    <div class="box box_bt">
       <div class="box__inner">
 
         <div class="order__number">Order #<%= line_item.order.id %>-1</div>
