--- a/app/views/line_items/new.html.erb
+++ b/app/views/line_items/new.html.erb
@@ -44,7 +44,7 @@
 
 
 <div class="option__center">
-<div class="box box_bt" style="width: 557px">
+<div class="box box_bt">
 <div class="box__inner box__inner_pt_21">
 
 <div class="order__number">Order #973-1</div>
