--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,7 @@
         <div class="head__theme head__theme_mb_32"></div>
 
         <div class="head__left">
-          <div class="head__logo"><a href="#" class="head__logo-link"><img src=<%=image_url "img/content/logo.svg"%> alt=""/></a></div>
+          <div class="head__logo"><a href="/" class="head__logo-link"><img src=<%=image_url "img/content/logo.svg"%> alt=""/></a></div>
           <div class="head__quality">
             <h1><a href="#" class="head__quality-link">Quality</a></h1>
             <h1><a href="#" class="head__quality-link">Beauty</a></h1>
