--- a/app/views/orders/checkout.html.erb
+++ b/app/views/orders/checkout.html.erb
@@ -19,7 +19,7 @@
   </div>
 
   <div class="order-info order-info_left">
-    <div class="box box_bt" style="width: 557px">
+    <div class="box box_bt">
       <div class="order-info__inner order-info__inner_pt">
 
         <div class="order-info__your-order total__row_mt_15">
