--- a/app/views/orders/_currency.html.erb
+++ b/app/views/orders/_currency.html.erb
@@ -1,4 +1,4 @@
-<div class="currency left">
+<div class="currency right">
   <p class="currency__text currency__text_bl <%= 'active' if currency == 'eur' %>" data-cur ="eur"><i class="fa fa-eur"></i></p>
   <p class="currency__text currency__text_border <%= 'active' if currency == 'usd' %>" data-cur ="usd"><i class="fa fa-usd"></i></p>
   <p class="currency__text currency__text_br <%= 'active' if currency == 'gbp' %>" data-cur ="gbp"><i class="fa fa-gbp"></i></p>
