--- a/app/views/orders/checkout.html.erb
+++ b/app/views/orders/checkout.html.erb
@@ -2,7 +2,7 @@
 
 <div class="payment-top">
 
-  <div class="breadcrumb-wrap breadcrumb-wrap_ml_187 breadcrumb-wrap_w_646 left">
+  <div class="breadcrumb-wrap breadcrumb-wrap_ml_187 left">
     <%= render partial: 'bread_crumbs', locals: {page: 'checkout'} %>
   </div>
     <%= render partial: 'currency', locals: {currency: @currency.code, item:''} %>
