--- a/app/assets/stylesheets/start.css.scss
+++ b/app/assets/stylesheets/start.css.scss
@@ -4152,9 +4152,9 @@ body * img::-webkit-selection {
 }
 
 .order__price .fa-usd {
-    font-size: 17px;
+    font-size: 26px;
     position: relative;
-    top: -10px
+    top: -2px
 }
 
 .order__price_close {
@@ -4749,9 +4749,9 @@ body * img::-webkit-selection {
 }
 
 .order-info__price .fa-usd {
-    font-size: 16px;
+    font-size: 26px;
     position: relative;
-    top: -8px
+    top: -2px
 }
 
 .order-info__price_lh {
@@ -4902,7 +4902,12 @@ body * img::-webkit-selection {
 }
 
 .processing-order__wrap {
-    margin: 35px 0 0 450px
+//    margin: 35px 0 0 450px
+  margin: auto;
+  max-width: 960px;
+}
+.mar_auto{
+  margin: 30px auto 30px;
 }
 
 .option {
@@ -6529,7 +6534,7 @@ input[type=radio].deadline-radio:checked + label.deadline-label:before {
 }
 
 .method-list__link_west {
-    background: url("/assets/img/icon/western.png") no-repeat 13px 6px
+    background: url("/assets/img/icon/western.png") no-repeat 3px 4px
 }
 
 .method-list__link_lh {
