--- a/app/assets/stylesheets/start.css.scss
+++ b/app/assets/stylesheets/start.css.scss
@@ -518,7 +518,7 @@ pre code {
 @font-face {
     font-family: 'FontAwesome';
     src: image_url("fonts/fontawesome-webfont.eot?");
-    src: image_url("fonts/fontawesome-webfont.eot??#iefix") format('embedded-opentype'), image_url("fonts/fontawesome-webfont.svg") format('svg'), image_url("fonts/fontawesome-webfont.woff") format('woff'), image_url("fonts/fontawesome-webfont.ttf") format('truetype');
+    src: image_url("fonts/fontawesome-webfont.eot") format('embedded-opentype'), image_url("fonts/fontawesome-webfont.svg") format('svg'), image_url("fonts/fontawesome-webfont.woff") format('woff'), image_url("fonts/fontawesome-webfont.ttf") format('truetype');
     font-weight: 400;
     font-style: normal
 }
