--- a/app/assets/stylesheets/start.css.scss
+++ b/app/assets/stylesheets/start.css.scss
@@ -517,8 +517,8 @@ pre code {
 
 @font-face {
     font-family: 'FontAwesome';
-    src: url("fonts/fontawesome-webfont.eot?");
-    src: url("fonts/fontawesome-webfont.eot??#iefix") format('embedded-opentype'), url("fonts/fontawesome-webfont.svg") format('svg'), url("fonts/fontawesome-webfont.woff") format('woff'), url("fonts/fontawesome-webfont.ttf") format('truetype');
+    src: image_url("fonts/fontawesome-webfont.eot?");
+    src: image_url("fonts/fontawesome-webfont.eot??#iefix") format('embedded-opentype'), image_url("fonts/fontawesome-webfont.svg") format('svg'), image_url("fonts/fontawesome-webfont.woff") format('woff'), image_url("fonts/fontawesome-webfont.ttf") format('truetype');
     font-weight: 400;
     font-style: normal
 }
@@ -2773,7 +2773,7 @@ body * img::-webkit-selection {
 }
 
 .icon-fb {
-    background: url("img/icon/facebook.svg") no-repeat top center
+    background: image_url("img/icon/facebook.svg") no-repeat top center
 }
 
 .icon-fb, .icon-instagram {
@@ -2784,12 +2784,12 @@ body * img::-webkit-selection {
 
 .icon-instagram {
     padding-left: 11px;
-    background: url("img/icon/instagram.svg") no-repeat top center
+    background: image_url("img/icon/instagram.svg") no-repeat top center
 }
 
 .icon-pinterest {
     padding-left: 1px;
-    background: url("img/icon/pinterest.svg") no-repeat top center
+    background: image_url("img/icon/pinterest.svg") no-repeat top center
 }
 
 .icon-pinterest, .icon-etsy {
@@ -2799,7 +2799,7 @@ body * img::-webkit-selection {
 }
 
 .icon-etsy {
-    background: url("img/icon/etsy-16x16.svg") no-repeat top center
+    background: image_url("img/icon/etsy-16x16.svg") no-repeat top center
 }
 
 .foot {
@@ -2916,7 +2916,7 @@ body * img::-webkit-selection {
 
 .instagram-icon {
     vertical-align: middle;
-    background: url("img/icon/instagram.svg") no-repeat;
+    background: image_url("img/icon/instagram.svg") no-repeat;
     -webkit-background-size: 100% auto;
     background-size: 100% auto;
     height: 19px;
@@ -2941,8 +2941,8 @@ body * img::-webkit-selection {
 
 @font-face {
     font-family: 'GrossKunst';
-    src: url("fonts_last/GrossKunst_display/fonts/GrossKunst_display.eot");
-    src: local('☺'), url("fonts_last/GrossKunst_display/fonts/GrossKunst_display.woff") format('woff'),url("fonts_last/GrossKunst_display/fonts/GrossKunst_display.ttf") format('truetype'), url("fonts_last/GrossKunst_display/fonts/GrossKunst_display.svg") format('svg');
+    src: image_url("fonts_last/GrossKunst_display/fonts/GrossKunst_display.eot");
+    src: local('☺'), image_url("fonts_last/GrossKunst_display/fonts/GrossKunst_display.woff") format('woff'),url("fonts_last/GrossKunst_display/fonts/GrossKunst_display.ttf") format('truetype'), image_url("fonts_last/GrossKunst_display/fonts/GrossKunst_display.svg") format('svg');
     font-weight: 400;
     font-style: normal
 }
@@ -2950,15 +2950,15 @@ body * img::-webkit-selection {
 @font-face {
     font-family: 'PT_Sans-Narrow-Web-Bold';
     src: url("fonts_last/PT_Sans-Narrow-Web-Bold/fonts/PT_Sans-Narrow-Web-Bold.eot");
-    src: local('☺'), url("fonts_last/PT_Sans-Narrow-Web-Bold/fonts/PT_Sans-Narrow-Web-Bold.woff") format('woff'), url("fonts_last/PT_Sans-Narrow-Web-Bold/fonts/PT_Sans-Narrow-Web-Bold.ttf") format('truetype'), url("fonts_last/PT_Sans-Narrow-Web-Bold/fonts/PT_Sans-Narrow-Web-Bold.svg") format('svg');
+    src: local('☺'), image_url("fonts_last/PT_Sans-Narrow-Web-Bold/fonts/PT_Sans-Narrow-Web-Bold.woff") format('woff'), image_url("fonts_last/PT_Sans-Narrow-Web-Bold/fonts/PT_Sans-Narrow-Web-Bold.ttf") format('truetype'), image_url("fonts_last/PT_Sans-Narrow-Web-Bold/fonts/PT_Sans-Narrow-Web-Bold.svg") format('svg');
     font-weight: 400;
     font-style: normal
 }
 
 @font-face {
     font-family: 'Conv_PT_Sans-Narrow-Web-Regular';
-    src: url("fonts_last/PT_Sans-Narrow-Web-Regular/fonts/PT_Sans-Narrow-Web-Regular.eot");
-    src: local('☺'), url("fonts_last/PT_Sans-Narrow-Web-Regular/fonts/PT_Sans-Narrow-Web-Regular.woff") format('woff'), url("fonts_last/PT_Sans-Narrow-Web-Regular/fonts/PT_Sans-Narrow-Web-Regular.ttf") format('truetype'), url("fonts_last/PT_Sans-Narrow-Web-Regular/fonts/PT_Sans-Narrow-Web-Regular.svg") format('svg');
+    src: image_url("fonts_last/PT_Sans-Narrow-Web-Regular/fonts/PT_Sans-Narrow-Web-Regular.eot");
+    src: local('☺'), image_url("fonts_last/PT_Sans-Narrow-Web-Regular/fonts/PT_Sans-Narrow-Web-Regular.woff") format('woff'), image_url("fonts_last/PT_Sans-Narrow-Web-Regular/fonts/PT_Sans-Narrow-Web-Regular.ttf") format('truetype'), image_url("fonts_last/PT_Sans-Narrow-Web-Regular/fonts/PT_Sans-Narrow-Web-Regular.svg") format('svg');
     font-weight: 400;
     font-style: normal
 }
@@ -2998,7 +2998,7 @@ body * img::-webkit-selection {
 .like-this__heart {
     color: #000;
     text-decoration: none;
-    background: url("img/icon/like.svg") -27px 0 no-repeat;
+    background: image_url("img/icon/like.svg") -27px 0 no-repeat;
     -webkit-background-size: 200% auto;
     background-size: 200% auto;
     width: 27px;
@@ -3220,7 +3220,7 @@ body * img::-webkit-selection {
 .summary__img {
     width: 215px;
     height: 29px;
-    background: url("img/icon/arrow-long.svg") left center no-repeat;
+    background: image_url("img/icon/arrow-long.svg") left center no-repeat;
     -webkit-background-size: 100% auto;
     background-size: 100% auto;
     text-align: center;
@@ -3272,7 +3272,7 @@ body * img::-webkit-selection {
 
 .price__like-off {
     text-decoration: none;
-    background: url("img/icon/like.svg") 100% 0 no-repeat;
+    background: image_url("img/icon/like.svg") 100% 0 no-repeat;
     -webkit-background-size: cover;
     background-size: cover;
     display: block;
@@ -3287,7 +3287,7 @@ body * img::-webkit-selection {
 
 .price__like-on {
     text-decoration: none;
-    background: url("img/icon/like.svg") 0 0 no-repeat;
+    background: image_url("img/icon/like.svg") 0 0 no-repeat;
     -webkit-background-size: cover;
     background-size: cover;
     display: block;
@@ -3423,7 +3423,7 @@ body * img::-webkit-selection {
 
 .option-list__arrow-up {
     display: block;
-    background: url("img/icon/arrow-up-crystal.png");
+    background: image_url("img/icon/arrow-up-crystal.png");
     width: 12px;
     height: 10px
 }
@@ -3434,7 +3434,7 @@ body * img::-webkit-selection {
 
 .option-list__arrow-down {
     display: block;
-    background: url("img/icon/arrow-down-crystal.png");
+    background: image_url("img/icon/arrow-down-crystal.png");
     width: 12px;
     height: 10px
 }
@@ -3700,7 +3700,7 @@ body * img::-webkit-selection {
 
 .item__rotator {
     vertical-align: bottom;
-    background: url("img/icon/rotator.svg") no-repeat;
+    background: image_url("img/icon/rotator.svg") no-repeat;
     height: 23px;
     width: 21%
 }
@@ -3716,7 +3716,7 @@ body * img::-webkit-selection {
 
 .item__like-off {
     text-decoration: none;
-    background: url("img/icon/like.svg") 100% 0 no-repeat;
+    background: image_url("img/icon/like.svg") 100% 0 no-repeat;
     -webkit-background-size: 200% auto;
     background-size: 200% auto;
     vertical-align: bottom;
@@ -3730,7 +3730,7 @@ body * img::-webkit-selection {
 
 .item__like-on {
     text-decoration: none;
-    background: url("img/icon/like.svg") 0 0 no-repeat;
+    background: image_url("img/icon/like.svg") 0 0 no-repeat;
     -webkit-background-size: 200% auto;
     background-size: 200% auto;
     vertical-align: bottom;
@@ -3802,7 +3802,7 @@ body * img::-webkit-selection {
     position: absolute;
     width: 130px;
     height: 130px;
-    background: url("img/icon/stock.png") no-repeat;
+    background: image_url("img/icon/stock.png") no-repeat;
     top: 0;
     right: 0
 }
@@ -4011,7 +4011,7 @@ body * img::-webkit-selection {
 
 .order__like-off {
     text-decoration: none;
-    background: url("img/icon/like.svg") 100% 0 no-repeat;
+    background: image_url("img/icon/like.svg") 100% 0 no-repeat;
     -webkit-background-size: cover;
     background-size: cover;
     display: block;
@@ -4026,7 +4026,7 @@ body * img::-webkit-selection {
 
 .order__like-on {
     text-decoration: none;
-    background: url("img/icon/like.svg") 0 0 no-repeat;
+    background: image_url("img/icon/like.svg") 0 0 no-repeat;
     -webkit-background-size: cover;
     background-size: cover;
     display: block;
@@ -4075,7 +4075,7 @@ body * img::-webkit-selection {
 .order__rotator {
     width: 35px;
     height: 19px;
-    background: url("img/icon/rotator.svg");
+    background: image_url("img/icon/rotator.svg");
     -webkit-background-size: 35px 19px;
     background-size: 35px 19px
 }
@@ -4452,7 +4452,7 @@ body * img::-webkit-selection {
     height: 9px;
     right: 106px;
     top: 8px;
-    background: url("img/icon/eye.png")
+    background: image_url("img/icon/eye.png")
 }
 
 .input-wrap__eye:hover {
@@ -5424,7 +5424,7 @@ body * img::-webkit-selection {
 }
 
 .size-list__arrow {
-    background: url("img/icon/arrow.svg") no-repeat center center;
+    background: image_url("img/icon/arrow.svg") no-repeat center center;
     -webkit-background-size: cover;
     background-size: cover;
     display: block;
@@ -5760,7 +5760,7 @@ body * img::-webkit-selection {
 .info__another-arrow {
     width: 140px;
     height: 22px;
-    background: url("img/icon/arrow-long.svg") left center no-repeat;
+    background: image_url("img/icon/arrow-long.svg") left center no-repeat;
     -webkit-background-size: 100% auto;
     background-size: 100% auto;
     text-align: center;
@@ -6506,13 +6506,13 @@ input[type=radio].deadline-radio:checked + label.deadline-label:before {
 }
 
 .method-list__link_visa {
-    background: url("img/icon/visa.png") no-repeat 13px 9px;
+    background: image_url("img/icon/visa.png") no-repeat 13px 9px;
     -webkit-background-size: 75% auto;
     background-size: 75% auto
 }
 
 .method-list__link_paypal {
-    background: url("img/icon/paypall.png") no-repeat 14px 5px
+    background: image_url("img/icon/paypall.png") no-repeat 14px 5px
 }
 
 .method-list__link_paypal, .method-list__link_west {
@@ -6521,7 +6521,7 @@ input[type=radio].deadline-radio:checked + label.deadline-label:before {
 }
 
 .method-list__link_west {
-    background: url("img/icon/western.png") no-repeat 13px 6px
+    background: image_url("img/icon/western.png") no-repeat 13px 6px
 }
 
 .method-list__link_lh {
@@ -6807,7 +6807,7 @@ input[type=radio].deadline-radio:checked + label.deadline-label:before {
 .property__next-arrow {
     width: 103px;
     height: 23px;
-    background: url("img/icon/arrow-long.svg") left center no-repeat;
+    background: image_url("img/icon/arrow-long.svg") left center no-repeat;
     -webkit-background-size: 100% auto;
     background-size: 100% auto;
     vertical-align: middle;
@@ -7131,7 +7131,7 @@ input[type=radio].deadline-radio:checked + label.deadline-label:before {
 }
 
 .share__fb-icon {
-    background: url("img/icon/facebook.svg") center center no-repeat;
+    background: image_url("img/icon/facebook.svg") center center no-repeat;
     -webkit-background-size: cover;
     background-size: cover;
     width: 15px;
@@ -7408,7 +7408,7 @@ input[type=radio].deadline-radio:checked + label.deadline-label:before {
 }
 
 .breadcrumb__arrow {
-    background: url("img/icon/arrow.svg") center 0 no-repeat;
+    background: image_url("img/icon/arrow.svg") center 0 no-repeat;
     -webkit-background-size: 60% 100%;
     background-size: 60% 100%;
     width: 22px;
@@ -7693,7 +7693,7 @@ input[type=radio].deadline-radio:checked + label.deadline-label:before {
 }
 a.small_cart {
   vertical-align: bottom;
-  background: url("img/icon/small_cart.png") no-repeat;
+  background: image_url("img/icon/small_cart.png") no-repeat;
   height: 30px;
   width: 30px;
   display: inline-block;
