repair assets Final

--- a/app/assets/stylesheets/start.css.scss
+++ b/app/assets/stylesheets/start.css.scss
@@ -7603,7 +7603,7 @@ input[type=radio].deadline-radio:checked + label.deadline-label:before {
     width: 92%;
     height: 100px;
     margin-left: 4%;
-    background-image:  url("img/texture/Spring-2_spam-1.jpg")
+    background-image: image_url("img/texture/Spring-2_spam-1.jpg")
 }
 
 .element-2 {
@@ -7612,7 +7612,7 @@ input[type=radio].deadline-radio:checked + label.deadline-label:before {
     width: 85.8%;
     height: 68px;
     margin: -84px 0 0 7.1%;
-    background-image:  url("img/texture/Spring-2_spam-2blur(2).jpg")
+    background-image:  url("img/texture/Spring-2_spam-2blur.jpg")
 }
 
 .field-1 {
