show right products on main

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,9 +1,9 @@
-
 <div class="item-main">
 <div id="container" class="">
-<%@variants.each_with_index  do |variant, block|%>
+<%@products.each do |prod|%>
+<%prod.variants.where(show_on_main: true).each_with_index  do |variant, block|%>
     <%=render partial: 'products/item', locals: {variant:variant, block: block, cur: @currency}%>
-<%end%>
+<%end; end%>
 
 </div>
 
