galleries for photos

--- a/app/views/variants/_photos.html.erb
+++ b/app/views/variants/_photos.html.erb
@@ -1,5 +1,5 @@
 <div class="property__example">
-  <%variant.pictures.each do |pic| %>
+  <%variant.pictures.where(main_gallery: true).each do |pic| %>
       <div class="property__example-wrap">
         <a href="#" class="property__img"><img src="<%=image_url pic.image.url(:thumb)%>" alt="" /></a>
       </div>
